--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 <br/><br/>
 <div>Feature Grid Demo</div>
 <div>
-  <div class="container" globe-view></div>
+  <div class="container" streaming-visualizations-view></div>
   <div ng-show="globe===true" id="globe"></div>
   <canvas ng-show="globe===true" id="canvas" width="1024" height="512" style="display: none;"></canvas>
 </div>
@@ -24,5 +24,5 @@
   <script src="./index.js"></script>
   <script src="./src/constants/GlobeView.constant.js"></script>
   <script src="./src/services/GlobeView.service.js"></script>
-  <script src="./src/directives/GlobeView.directive.js"></script>
+  <script src="./src/directives/StreamingVisualizations.directive.js"></script>
 </html>
