Visualisation Directive : Work in Progress

--- a/main.html
+++ b/main.html
@@ -10,9 +10,9 @@
 <br/><br/>
 <div>Feature Grid Demo</div>
 <div>
-  <div class="container" streaming-visualizations-view></div>
-  <div ng-show="globe===true" id="globe"></div>
-  <canvas ng-show="globe===true" id="canvas" width="1024" height="512" style="display: none;"></canvas>
+  <div streaming-visualizations-view visualization="globe"></div>
+  <div id="globe"></div>
+  <canvas id="canvas" width="1024" height="512" style="display: none;"></canvas>
 </div>
 </body>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
