Minot Folder name changes

--- a/main.html
+++ b/main.html
@@ -44,9 +44,10 @@
         </md-content>
     </div>
     <div>
-        <div streaming-visualizations-view visualization="globe"></div>
+        <div streaming-visualizations-view visualization="globe">
         <div id="globe"></div>
         <canvas id="canvas" width="1024" height="512" style="display: none;"></canvas>
+        </div>
     </div>
 </body>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
